// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the schema > parses a schema with morning periods 1`] = `
{
  "days": [
    {
      "dayname": "MonA",
      "periods": {
        "1": {
          "room": "403",
          "teacher": "GENM",
          "title": "HIS CY",
          "year": "9",
        },
        "2": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
        "3": {
          "room": "507",
          "teacher": "ROWJ",
          "title": "COM CX",
          "year": "9",
        },
        "4": {
          "room": "102",
          "teacher": "ZHEM",
          "title": "MAT B",
          "year": "9",
        },
        "5": {
          "room": "507",
          "teacher": "ROWJ",
          "title": "COM CX",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,4,MTL1,MTL2,5",
    },
    {
      "dayname": "TueA",
      "periods": {
        "1": {
          "room": "902",
          "teacher": "HAYB",
          "title": "PDH A",
          "year": "9",
        },
        "2": {
          "room": "403",
          "teacher": "GENM",
          "title": "HIS CY",
          "year": "9",
        },
        "3": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "4": {
          "room": "611",
          "teacher": "STEL",
          "title": "PDM CZ",
          "year": "9",
        },
        "5": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,4,MTL1,MTL2,5",
    },
    {
      "dayname": "WedA",
      "periods": {
        "1": {
          "room": "202",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "2": {
          "room": "202",
          "teacher": "HAYB",
          "title": "PDH A",
          "year": "9",
        },
        "3": {
          "room": "403",
          "teacher": "GENM",
          "title": "HIS CY",
          "year": "9",
        },
        "4": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
        "5": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "ThuA",
      "periods": {
        "1": {
          "room": "102",
          "teacher": "ZHEM",
          "title": "MAT B",
          "year": "9",
        },
        "2": {
          "room": "611",
          "teacher": "STEL",
          "title": "PDM CZ",
          "year": "9",
        },
        "3": {
          "room": "506",
          "teacher": "MARD",
          "title": "COM CX",
          "year": "9",
        },
        "4": {
          "room": null,
          "teacher": null,
          "title": "SP 9",
          "year": "9",
        },
        "5": {
          "room": null,
          "teacher": null,
          "title": "SP 9",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "FriA",
      "periods": {
        "0": {
          "room": null,
          "teacher": "KAYJ",
          "title": "Scripture 9",
          "year": "9",
        },
        "1": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "2": {
          "room": "208",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "3": {
          "room": "102",
          "teacher": "ZHEM",
          "title": "MAT B",
          "year": "9",
        },
        "4": {
          "room": "213",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "5": {
          "room": "205",
          "teacher": "PAUV",
          "title": "VED A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "MonB",
      "periods": {
        "1": {
          "room": "507",
          "teacher": "ROWJ",
          "title": "COM CX",
          "year": "9",
        },
        "2": {
          "room": "611",
          "teacher": "STEL",
          "title": "PDM CZ",
          "year": "9",
        },
        "3": {
          "room": "102",
          "teacher": "ZHEM",
          "title": "MAT B",
          "year": "9",
        },
        "4": {
          "room": "403",
          "teacher": "GENM",
          "title": "HIS CY",
          "year": "9",
        },
        "5": {
          "room": "202",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,4,MTL1,MTL2,5",
    },
    {
      "dayname": "TueB",
      "periods": {
        "1": {
          "room": "611",
          "teacher": "STEL",
          "title": "PDM CZ",
          "year": "9",
        },
        "2": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "3": {
          "room": "203",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "4": {
          "room": "102",
          "teacher": "ZHEM",
          "title": "MAT B",
          "year": "9",
        },
        "5": {
          "room": "403",
          "teacher": "GENM",
          "title": "HIS CY",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,4,MTL1,MTL2,5",
    },
    {
      "dayname": "WedB",
      "periods": {
        "1": {
          "room": "205",
          "teacher": "PAUV",
          "title": "VED A",
          "year": "9",
        },
        "2": {
          "room": "202",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "3": {
          "room": "403",
          "teacher": "GENM",
          "title": "HIS CY",
          "year": "9",
        },
        "4": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "5": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "ThuB",
      "periods": {
        "1": {
          "room": "102",
          "teacher": "ZHEM",
          "title": "MAT B",
          "year": "9",
        },
        "2": {
          "room": "301",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "3": {
          "room": "506",
          "teacher": "MARD",
          "title": "COM CX",
          "year": "9",
        },
        "4": {
          "room": null,
          "teacher": null,
          "title": "SP 9",
          "year": "9",
        },
        "5": {
          "room": null,
          "teacher": null,
          "title": "SP 9",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "FriB",
      "periods": {
        "0": {
          "room": null,
          "teacher": "KAYJ",
          "title": "Scripture 9",
          "year": "9",
        },
        "1": {
          "room": "902",
          "teacher": "HAYB",
          "title": "PDH A",
          "year": "9",
        },
        "2": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
        "3": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "4": {
          "room": "213",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "5": {
          "room": "102",
          "teacher": "ZHEM",
          "title": "MAT B",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "MonC",
      "periods": {
        "1": {
          "room": "608",
          "teacher": "ROWJ",
          "title": "COM CX",
          "year": "9",
        },
        "2": {
          "room": "611",
          "teacher": "STEL",
          "title": "PDM CZ",
          "year": "9",
        },
        "3": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
        "4": {
          "room": "102",
          "teacher": "ZHEM",
          "title": "MAT B",
          "year": "9",
        },
        "5": {
          "room": "202",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,4,MTL1,MTL2,5",
    },
    {
      "dayname": "TueC",
      "periods": {
        "1": {
          "room": "611",
          "teacher": "STEL",
          "title": "PDM CZ",
          "year": "9",
        },
        "2": {
          "room": "902",
          "teacher": "HAYB",
          "title": "PDH A",
          "year": "9",
        },
        "3": {
          "room": "507",
          "teacher": "ROWJ",
          "title": "COM CX",
          "year": "9",
        },
        "4": {
          "room": "403",
          "teacher": "GENM",
          "title": "HIS CY",
          "year": "9",
        },
        "5": {
          "room": "202",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,4,MTL1,MTL2,5",
    },
    {
      "dayname": "WedC",
      "periods": {
        "1": {
          "room": "902",
          "teacher": "HAYB",
          "title": "PDH A",
          "year": "9",
        },
        "2": {
          "room": "213",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "3": {
          "room": "102",
          "teacher": "ZHEM",
          "title": "MAT B",
          "year": "9",
        },
        "4": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "5": {
          "room": "202",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "ThuC",
      "periods": {
        "1": {
          "room": "102",
          "teacher": "ZHEM",
          "title": "MAT B",
          "year": "9",
        },
        "2": {
          "room": "611",
          "teacher": "STEL",
          "title": "PDM CZ",
          "year": "9",
        },
        "3": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "4": {
          "room": null,
          "teacher": null,
          "title": "SP 9",
          "year": "9",
        },
        "5": {
          "room": null,
          "teacher": null,
          "title": "SP 9",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "FriC",
      "periods": {
        "0": {
          "room": null,
          "teacher": "KAYJ",
          "title": "Scripture 9",
          "year": "9",
        },
        "1": {
          "room": "213",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "2": {
          "room": "102",
          "teacher": "ZHEM",
          "title": "MAT B",
          "year": "9",
        },
        "3": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "4": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
        "5": {
          "room": "205",
          "teacher": "PAUV",
          "title": "VED A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "STEL",
        "title": "RC 9S",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
  ],
  "subjects": [
    {
      "colour": "7f5252",
      "fullTeacher": "",
      "shortTitle": "SP 9",
      "subject": "Sport Yr9",
      "teacher": null,
      "title": "9 Sport 9",
      "year": "9",
    },
    {
      "colour": "640064",
      "fullTeacher": "V Paul",
      "shortTitle": "VED A",
      "subject": "Values Education Yr9",
      "teacher": "PAUV",
      "title": "9 Values Education A",
      "year": "9",
    },
    {
      "colour": "004040",
      "fullTeacher": "B Hayman",
      "shortTitle": "PDH A",
      "subject": "PDHPE Yr9",
      "teacher": "HAYB",
      "title": "9 PDHPE A",
      "year": "9",
    },
    {
      "colour": "008080",
      "fullTeacher": "J Rowlands",
      "shortTitle": "COM CX",
      "subject": "Commerce Yr9",
      "teacher": "ROWJ",
      "title": "9 Commerce CX",
      "year": "9",
    },
    {
      "colour": "dc5221",
      "fullTeacher": "M Zheng",
      "shortTitle": "MAT B",
      "subject": "Mathematics 5.3 Yr9",
      "teacher": "ZHEM",
      "title": "9 Mathematics 5.3 B",
      "year": "9",
    },
    {
      "colour": "c0c0c0",
      "fullTeacher": "K Rich",
      "shortTitle": "YA RST",
      "subject": "Year Adviser",
      "teacher": "RICK",
      "title": "9 Year RST",
      "year": "9",
    },
    {
      "colour": "c0c0c0",
      "fullTeacher": "J Kay",
      "shortTitle": "Scripture 9",
      "subject": "Scripture Yr9",
      "teacher": "KAYJ",
      "title": "9 Scripture 9",
      "year": "9",
    },
    {
      "colour": "008080",
      "fullTeacher": "H Stephens",
      "shortTitle": "GEO A",
      "subject": "Geography Yr9",
      "teacher": "STEH",
      "title": "9 Geography A",
      "year": "9",
    },
    {
      "colour": "ffd718",
      "fullTeacher": "N Lau",
      "shortTitle": "ENG A",
      "subject": "English Yr9",
      "teacher": "LAUN",
      "title": "9 English A",
      "year": "9",
    },
    {
      "colour": "c488ff",
      "fullTeacher": "L Stewart",
      "shortTitle": "PDM CZ",
      "subject": "Photography & Digital Media Yr9",
      "teacher": "STEL",
      "title": "9 Photography & Digital Media CZ",
      "year": "9",
    },
    {
      "colour": "2ee8d7",
      "fullTeacher": "O The",
      "shortTitle": "SCI A",
      "subject": "Science Yr9",
      "teacher": "THEO",
      "title": "9 Science A",
      "year": "9",
    },
    {
      "colour": "9d9d4f",
      "fullTeacher": "M Genias",
      "shortTitle": "HIS CY",
      "subject": "History Yr9",
      "teacher": "GENM",
      "title": "9 History CY",
      "year": "9",
    },
  ],
}
`;

exports[`the schema > parses a timetable with no morning periods 1`] = `
{
  "days": [
    {
      "dayname": "MonA",
      "periods": {
        "1": {
          "room": "504",
          "teacher": "HUYD",
          "title": "GRT BY",
          "year": "9",
        },
        "2": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
        "3": {
          "room": "403",
          "teacher": "GENM",
          "title": "HIS BX",
          "year": "9",
        },
        "4": {
          "room": "106",
          "teacher": "WANA",
          "title": "MAT A",
          "year": "9",
        },
        "5": {
          "room": "403",
          "teacher": "GENM",
          "title": "HIS BX",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,4,MTL1,MTL2,5",
    },
    {
      "dayname": "TueA",
      "periods": {
        "1": {
          "room": "902",
          "teacher": "HAYB",
          "title": "PDH A",
          "year": "9",
        },
        "2": {
          "room": "504",
          "teacher": "HUYD",
          "title": "GRT BY",
          "year": "9",
        },
        "3": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "4": {
          "room": "502",
          "teacher": "GIFR",
          "title": "D&T CZ",
          "year": "9",
        },
        "5": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,4,MTL1,MTL2,5",
    },
    {
      "dayname": "WedA",
      "periods": {
        "1": {
          "room": "202",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "2": {
          "room": "202",
          "teacher": "HAYB",
          "title": "PDH A",
          "year": "9",
        },
        "3": {
          "room": "504",
          "teacher": "HUYD",
          "title": "GRT BY",
          "year": "9",
        },
        "4": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
        "5": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "ThuA",
      "periods": {
        "1": {
          "room": "106",
          "teacher": "WANA",
          "title": "MAT A",
          "year": "9",
        },
        "2": {
          "room": "502",
          "teacher": "GIFR",
          "title": "D&T CZ",
          "year": "9",
        },
        "3": {
          "room": "403",
          "teacher": "PAUV",
          "title": "HIS BX",
          "year": "9",
        },
        "4": {
          "room": null,
          "teacher": null,
          "title": "SP 9",
          "year": "9",
        },
        "5": {
          "room": null,
          "teacher": null,
          "title": "SP 9",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "FriA",
      "periods": {
        "1": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "2": {
          "room": "208",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "3": {
          "room": "106",
          "teacher": "WANA",
          "title": "MAT A",
          "year": "9",
        },
        "4": {
          "room": "213",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "5": {
          "room": "205",
          "teacher": "PAUV",
          "title": "VED A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "MonB",
      "periods": {
        "1": {
          "room": "403",
          "teacher": "GENM",
          "title": "HIS BX",
          "year": "9",
        },
        "2": {
          "room": "802",
          "teacher": "GIFR",
          "title": "D&T CZ",
          "year": "9",
        },
        "3": {
          "room": "106",
          "teacher": "WANA",
          "title": "MAT A",
          "year": "9",
        },
        "4": {
          "room": "504",
          "teacher": "HUYD",
          "title": "GRT BY",
          "year": "9",
        },
        "5": {
          "room": "202",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,4,MTL1,MTL2,5",
    },
    {
      "dayname": "TueB",
      "periods": {
        "1": {
          "room": "502",
          "teacher": "GIFR",
          "title": "D&T CZ",
          "year": "9",
        },
        "2": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "3": {
          "room": "203",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "4": {
          "room": "106",
          "teacher": "WANA",
          "title": "MAT A",
          "year": "9",
        },
        "5": {
          "room": "504",
          "teacher": "HUYD",
          "title": "GRT BY",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,4,MTL1,MTL2,5",
    },
    {
      "dayname": "WedB",
      "periods": {
        "1": {
          "room": "205",
          "teacher": "PAUV",
          "title": "VED A",
          "year": "9",
        },
        "2": {
          "room": "202",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "3": {
          "room": "504",
          "teacher": "HUYD",
          "title": "GRT BY",
          "year": "9",
        },
        "4": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "5": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "ThuB",
      "periods": {
        "1": {
          "room": "106",
          "teacher": "WANA",
          "title": "MAT A",
          "year": "9",
        },
        "2": {
          "room": "301",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "3": {
          "room": "403",
          "teacher": "PAUV",
          "title": "HIS BX",
          "year": "9",
        },
        "4": {
          "room": null,
          "teacher": null,
          "title": "SP 9",
          "year": "9",
        },
        "5": {
          "room": null,
          "teacher": null,
          "title": "SP 9",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "FriB",
      "periods": {
        "1": {
          "room": "902",
          "teacher": "HAYB",
          "title": "PDH A",
          "year": "9",
        },
        "2": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
        "3": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "4": {
          "room": "213",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "5": {
          "room": "106",
          "teacher": "WANA",
          "title": "MAT A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "MonC",
      "periods": {
        "1": {
          "room": "403",
          "teacher": "GENM",
          "title": "HIS BX",
          "year": "9",
        },
        "2": {
          "room": "502",
          "teacher": "GIFR",
          "title": "D&T CZ",
          "year": "9",
        },
        "3": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
        "4": {
          "room": "106",
          "teacher": "WANA",
          "title": "MAT A",
          "year": "9",
        },
        "5": {
          "room": "202",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,4,MTL1,MTL2,5",
    },
    {
      "dayname": "TueC",
      "periods": {
        "1": {
          "room": "502",
          "teacher": "GIFR",
          "title": "D&T CZ",
          "year": "9",
        },
        "2": {
          "room": "902",
          "teacher": "HAYB",
          "title": "PDH A",
          "year": "9",
        },
        "3": {
          "room": "403",
          "teacher": "GENM",
          "title": "HIS BX",
          "year": "9",
        },
        "4": {
          "room": "504",
          "teacher": "HUYD",
          "title": "GRT BY",
          "year": "9",
        },
        "5": {
          "room": "202",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,4,MTL1,MTL2,5",
    },
    {
      "dayname": "WedC",
      "periods": {
        "1": {
          "room": "902",
          "teacher": "HAYB",
          "title": "PDH A",
          "year": "9",
        },
        "2": {
          "room": "213",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "3": {
          "room": "106",
          "teacher": "WANA",
          "title": "MAT A",
          "year": "9",
        },
        "4": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "5": {
          "room": "202",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "ThuC",
      "periods": {
        "1": {
          "room": "106",
          "teacher": "WANA",
          "title": "MAT A",
          "year": "9",
        },
        "2": {
          "room": "802",
          "teacher": "GIFR",
          "title": "D&T CZ",
          "year": "9",
        },
        "3": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "4": {
          "room": null,
          "teacher": null,
          "title": "SP 9",
          "year": "9",
        },
        "5": {
          "room": null,
          "teacher": null,
          "title": "SP 9",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
    {
      "dayname": "FriC",
      "periods": {
        "1": {
          "room": "213",
          "teacher": "LAUN",
          "title": "ENG A",
          "year": "9",
        },
        "2": {
          "room": "105",
          "teacher": "JAMJ",
          "title": "MAT A",
          "year": "9",
        },
        "3": {
          "room": "702",
          "teacher": "THEO",
          "title": "SCI A",
          "year": "9",
        },
        "4": {
          "room": "506",
          "teacher": "STEH",
          "title": "GEO A",
          "year": "9",
        },
        "5": {
          "room": "205",
          "teacher": "PAUV",
          "title": "VED A",
          "year": "9",
        },
      },
      "rollcall": {
        "room": null,
        "teacher": "JACB",
        "title": "RC 9E",
      },
      "routine": "0,RC,1,2,R,3,WFL1,WFL2,4,5",
    },
  ],
  "subjects": [
    {
      "colour": "448ae6",
      "fullTeacher": "R Gifford",
      "shortTitle": "D&T CZ",
      "subject": "Design & Technology Yr9",
      "teacher": "GIFR",
      "title": "9 Design & Technology CZ",
      "year": "9",
    },
    {
      "colour": "7f5252",
      "fullTeacher": "",
      "shortTitle": "SP 9",
      "subject": "Sport Yr9",
      "teacher": null,
      "title": "9 Sport 9",
      "year": "9",
    },
    {
      "colour": "640064",
      "fullTeacher": "V Paul",
      "shortTitle": "VED A",
      "subject": "Values Education Yr9",
      "teacher": "PAUV",
      "title": "9 Values Education A",
      "year": "9",
    },
    {
      "colour": "004040",
      "fullTeacher": "B Hayman",
      "shortTitle": "PDH A",
      "subject": "PDHPE Yr9",
      "teacher": "HAYB",
      "title": "9 PDHPE A",
      "year": "9",
    },
    {
      "colour": "c0c0c0",
      "fullTeacher": "J James",
      "shortTitle": "YA EFM",
      "subject": "Year Adviser",
      "teacher": "JAMJ",
      "title": "9 Year EFM",
      "year": "9",
    },
    {
      "colour": "9d9d4f",
      "fullTeacher": "M Genias",
      "shortTitle": "HIS BX",
      "subject": "History Yr9",
      "teacher": "GENM",
      "title": "9 History BX",
      "year": "9",
    },
    {
      "colour": "008080",
      "fullTeacher": "H Stephens",
      "shortTitle": "GEO A",
      "subject": "Geography Yr9",
      "teacher": "STEH",
      "title": "9 Geography A",
      "year": "9",
    },
    {
      "colour": "dc5221",
      "fullTeacher": "A Wang",
      "shortTitle": "MAT A",
      "subject": "Mathematics 5.3 Yr9",
      "teacher": "WANA",
      "title": "9 Mathematics 5.3 A",
      "year": "9",
    },
    {
      "colour": "448ae6",
      "fullTeacher": "D Huynh",
      "shortTitle": "GRT BY",
      "subject": "Graphics Technology Yr9",
      "teacher": "HUYD",
      "title": "9 Graphics Technology BY",
      "year": "9",
    },
    {
      "colour": "ffd718",
      "fullTeacher": "N Lau",
      "shortTitle": "ENG A",
      "subject": "English Yr9",
      "teacher": "LAUN",
      "title": "9 English A",
      "year": "9",
    },
    {
      "colour": "2ee8d7",
      "fullTeacher": "O The",
      "shortTitle": "SCI A",
      "subject": "Science Yr9",
      "teacher": "THEO",
      "title": "9 Science A",
      "year": "9",
    },
  ],
}
`;
